tests/snapshots/integration__integration_tests__approval_ui__force_does_not_save_approvals_second_run.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----
❌ [31mCannot prompt for approval in non-interactive environment[0m

💡 [2mIn CI/CD, use --force to skip prompts. To pre-approve commands, use 'wt config approvals add'[0m

----- stderr -----
🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m1[0m[33m command:[0m

🔄 post-create:
[107m [0m  [1m[2m[34mecho[0m [2m[32m'test command'[0m [2m[36m>[0m output.txt[0m
